verilog_langserver/verilog_parser/antlr_build/WorkspaceSymbolsParser.py
# Generated from C:\Users\eirik\Desktop\verilog-langserver\verilog_langserver\verilog_parser/grammar/WorkspaceSymbols.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class WorkspaceSymbolsParser ( Parser ):

    grammarFileName = "WorkspaceSymbols.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#('", "'void'", "'static'", "'automatic'", 
                     "'$root'", "<INVALID>", "<INVALID>", "' '", "'\t'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "';'", "':'", "','", "'='", 
                     "'?'", "'.'", "<INVALID>", "<INVALID>", "'module'", 
                     "'endmodule'", "'interface'", "'endinterface'", "'class'", 
                     "'endclass'", "'config'", "'endconfig'", "'primitive'", 
                     "'endprimitive'", "'program'", "'endprogram'", "'task'", 
                     "'endtask'", "'function'", "'endfunction'", "'package'", 
                     "'endpackage'", "'input'", "'output'", "'virtual'", 
                     "'typedef'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
                      "SPACE", "TAB", "NEWLINE", "String", "COMPILER_DIRECTIVE", 
                      "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", 
                      "OpenBrace", "CloseBrace", "SemiColon", "Colon", "Comma", 
                      "Assign", "QuestionMark", "Dot", "Apostrophe", "Operators", 
                      "Module", "Endmodule", "Interface", "Endinterface", 
                      "Class", "Endclass", "Config", "Endconfig", "Primitive", 
                      "Endprimitive", "Program", "Endprogram", "Task", "Endtask", 
                      "Function", "Endfunction", "Package", "Endpackage", 
                      "Input", "Output", "Virtual", "Typedef", "Number", 
                      "IntegralNumber", "RealNumber", "UnsignedNumber", 
                      "DecimalNumber", "BinaryNumber", "OctalNumber", "HexNumber", 
                      "UnbasedUnsizedLiteral", "Time", "Word" ]

    RULE_source = 0
    RULE_declaration = 1
    RULE_module_declaration = 2
    RULE_interface_declaration = 3
    RULE_program_declaration = 4
    RULE_package_declaration = 5
    RULE_config_declaration = 6
    RULE_class_declaration = 7
    RULE_udp_declaration = 8
    RULE_package_item = 9
    RULE_task_declaration = 10
    RULE_function_declaration = 11
    RULE_type_declaration = 12
    RULE_parameter_port_list = 13
    RULE_port_list = 14
    RULE_return_val = 15
    RULE_life_time = 16
    RULE_identifier = 17
    RULE_label = 18
    RULE_hierarchical_identifier = 19
    RULE_constant_bit_select = 20

    ruleNames =  [ "source", "declaration", "module_declaration", "interface_declaration", 
                   "program_declaration", "package_declaration", "config_declaration", 
                   "class_declaration", "udp_declaration", "package_item", 
                   "task_declaration", "function_declaration", "type_declaration", 
                   "parameter_port_list", "port_list", "return_val", "life_time", 
                   "identifier", "label", "hierarchical_identifier", "constant_bit_select" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    SINGLELINE_COMMENT=6
    MULTILINE_COMMENT=7
    SPACE=8
    TAB=9
    NEWLINE=10
    String=11
    COMPILER_DIRECTIVE=12
    OpenBracket=13
    CloseBracket=14
    OpenParen=15
    CloseParen=16
    OpenBrace=17
    CloseBrace=18
    SemiColon=19
    Colon=20
    Comma=21
    Assign=22
    QuestionMark=23
    Dot=24
    Apostrophe=25
    Operators=26
    Module=27
    Endmodule=28
    Interface=29
    Endinterface=30
    Class=31
    Endclass=32
    Config=33
    Endconfig=34
    Primitive=35
    Endprimitive=36
    Program=37
    Endprogram=38
    Task=39
    Endtask=40
    Function=41
    Endfunction=42
    Package=43
    Endpackage=44
    Input=45
    Output=46
    Virtual=47
    Typedef=48
    Number=49
    IntegralNumber=50
    RealNumber=51
    UnsignedNumber=52
    DecimalNumber=53
    BinaryNumber=54
    OctalNumber=55
    HexNumber=56
    UnbasedUnsizedLiteral=57
    Time=58
    Word=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(WorkspaceSymbolsParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorkspaceSymbolsParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(WorkspaceSymbolsParser.DeclarationContext,i)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_source

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)




    def source(self):

        localctx = WorkspaceSymbolsParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << WorkspaceSymbolsParser.Module) | (1 << WorkspaceSymbolsParser.Interface) | (1 << WorkspaceSymbolsParser.Class) | (1 << WorkspaceSymbolsParser.Config) | (1 << WorkspaceSymbolsParser.Primitive) | (1 << WorkspaceSymbolsParser.Program) | (1 << WorkspaceSymbolsParser.Task) | (1 << WorkspaceSymbolsParser.Function) | (1 << WorkspaceSymbolsParser.Package) | (1 << WorkspaceSymbolsParser.Virtual) | (1 << WorkspaceSymbolsParser.Typedef))) != 0):
                self.state = 42
                self.declaration()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(WorkspaceSymbolsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Module_declarationContext,0)


        def interface_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Interface_declarationContext,0)


        def program_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Program_declarationContext,0)


        def package_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Package_declarationContext,0)


        def package_item(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Package_itemContext,0)


        def config_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Config_declarationContext,0)


        def udp_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Udp_declarationContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = WorkspaceSymbolsParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [WorkspaceSymbolsParser.Module]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.module_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Interface]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.interface_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Program]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.program_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Package]:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.package_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Class, WorkspaceSymbolsParser.Task, WorkspaceSymbolsParser.Function, WorkspaceSymbolsParser.Virtual, WorkspaceSymbolsParser.Typedef]:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.package_item()
                pass
            elif token in [WorkspaceSymbolsParser.Config]:
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.config_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Primitive]:
                self.enterOuterAlt(localctx, 7)
                self.state = 56
                self.udp_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Module(self):
            return self.getToken(WorkspaceSymbolsParser.Module, 0)

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def Endmodule(self):
            return self.getToken(WorkspaceSymbolsParser.Endmodule, 0)

        def parameter_port_list(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Parameter_port_listContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_module_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_declaration" ):
                return visitor.visitModule_declaration(self)
            else:
                return visitor.visitChildren(self)




    def module_declaration(self):

        localctx = WorkspaceSymbolsParser.Module_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(WorkspaceSymbolsParser.Module)
            self.state = 60
            self.identifier()
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 61
                self.parameter_port_list()


            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 64
                    self.matchWildcard() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 70
            self.match(WorkspaceSymbolsParser.Endmodule)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 71
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Interface(self):
            return self.getToken(WorkspaceSymbolsParser.Interface, 0)

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def Endinterface(self):
            return self.getToken(WorkspaceSymbolsParser.Endinterface, 0)

        def parameter_port_list(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Parameter_port_listContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_interface_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_declaration" ):
                return visitor.visitInterface_declaration(self)
            else:
                return visitor.visitChildren(self)




    def interface_declaration(self):

        localctx = WorkspaceSymbolsParser.Interface_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interface_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(WorkspaceSymbolsParser.Interface)
            self.state = 75
            self.identifier()
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 76
                self.parameter_port_list()


            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 79
                    self.matchWildcard() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 85
            self.match(WorkspaceSymbolsParser.Endinterface)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 86
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Program(self):
            return self.getToken(WorkspaceSymbolsParser.Program, 0)

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def Endprogram(self):
            return self.getToken(WorkspaceSymbolsParser.Endprogram, 0)

        def life_time(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Life_timeContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_program_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_declaration" ):
                return visitor.visitProgram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def program_declaration(self):

        localctx = WorkspaceSymbolsParser.Program_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(WorkspaceSymbolsParser.Program)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.T__2 or _la==WorkspaceSymbolsParser.T__3:
                self.state = 90
                self.life_time()


            self.state = 93
            self.identifier()
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 94
                    self.matchWildcard() 
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 100
            self.match(WorkspaceSymbolsParser.Endprogram)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 101
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Package(self):
            return self.getToken(WorkspaceSymbolsParser.Package, 0)

        def Endpackage(self):
            return self.getToken(WorkspaceSymbolsParser.Endpackage, 0)

        def package_item(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Package_itemContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_package_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_declaration" ):
                return visitor.visitPackage_declaration(self)
            else:
                return visitor.visitChildren(self)




    def package_declaration(self):

        localctx = WorkspaceSymbolsParser.Package_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_package_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(WorkspaceSymbolsParser.Package)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 105
                self.package_item()
                pass

            elif la_ == 2:
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 106
                        self.matchWildcard() 
                    self.state = 111
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass


            self.state = 114
            self.match(WorkspaceSymbolsParser.Endpackage)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 115
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Config(self):
            return self.getToken(WorkspaceSymbolsParser.Config, 0)

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def Endconfig(self):
            return self.getToken(WorkspaceSymbolsParser.Endconfig, 0)

        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_config_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig_declaration" ):
                return visitor.visitConfig_declaration(self)
            else:
                return visitor.visitChildren(self)




    def config_declaration(self):

        localctx = WorkspaceSymbolsParser.Config_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_config_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(WorkspaceSymbolsParser.Config)
            self.state = 119
            self.identifier()
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 120
                    self.matchWildcard() 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 126
            self.match(WorkspaceSymbolsParser.Endconfig)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 127
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(WorkspaceSymbolsParser.Class, 0)

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def Endclass(self):
            return self.getToken(WorkspaceSymbolsParser.Endclass, 0)

        def Virtual(self):
            return self.getToken(WorkspaceSymbolsParser.Virtual, 0)

        def life_time(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Life_timeContext,0)


        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_class_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = WorkspaceSymbolsParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Virtual:
                self.state = 130
                self.match(WorkspaceSymbolsParser.Virtual)


            self.state = 133
            self.match(WorkspaceSymbolsParser.Class)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.T__2 or _la==WorkspaceSymbolsParser.T__3:
                self.state = 134
                self.life_time()


            self.state = 137
            self.identifier()
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 138
                    self.matchWildcard() 
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

            self.state = 144
            self.match(WorkspaceSymbolsParser.Endclass)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 145
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Udp_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Primitive(self):
            return self.getToken(WorkspaceSymbolsParser.Primitive, 0)

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def Endprimitive(self):
            return self.getToken(WorkspaceSymbolsParser.Endprimitive, 0)

        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_udp_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUdp_declaration" ):
                return visitor.visitUdp_declaration(self)
            else:
                return visitor.visitChildren(self)




    def udp_declaration(self):

        localctx = WorkspaceSymbolsParser.Udp_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_udp_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(WorkspaceSymbolsParser.Primitive)
            self.state = 149
            self.identifier()
            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 150
                    self.matchWildcard() 
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

            self.state = 156
            self.match(WorkspaceSymbolsParser.Endprimitive)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 157
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def task_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Task_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Function_declarationContext,0)


        def class_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Class_declarationContext,0)


        def type_declaration(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Type_declarationContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_package_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_item" ):
                return visitor.visitPackage_item(self)
            else:
                return visitor.visitChildren(self)




    def package_item(self):

        localctx = WorkspaceSymbolsParser.Package_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_package_item)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [WorkspaceSymbolsParser.Task]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.task_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Function]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.function_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Class, WorkspaceSymbolsParser.Virtual]:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.class_declaration()
                pass
            elif token in [WorkspaceSymbolsParser.Typedef]:
                self.enterOuterAlt(localctx, 4)
                self.state = 163
                self.type_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Task_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Task(self):
            return self.getToken(WorkspaceSymbolsParser.Task, 0)

        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def Endtask(self):
            return self.getToken(WorkspaceSymbolsParser.Endtask, 0)

        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_task_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask_declaration" ):
                return visitor.visitTask_declaration(self)
            else:
                return visitor.visitChildren(self)




    def task_declaration(self):

        localctx = WorkspaceSymbolsParser.Task_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_task_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(WorkspaceSymbolsParser.Task)
            self.state = 167
            self.identifier()
            self.state = 171
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,23,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 168
                    self.matchWildcard() 
                self.state = 173
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

            self.state = 174
            self.match(WorkspaceSymbolsParser.Endtask)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==WorkspaceSymbolsParser.Colon:
                self.state = 175
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Function(self):
            return self.getToken(WorkspaceSymbolsParser.Function, 0)

        def return_val(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.Return_valContext,0)


        def identifier(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.IdentifierContext,0)


        def OpenParen(self):
            return self.getToken(WorkspaceSymbolsParser.OpenParen, 0)

        def Endfunction(self):
            return self.getToken(WorkspaceSymbolsParser.Endfunction, 0)

        def label(self):
            return self.getTypedRuleContext(WorkspaceSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return WorkspaceSymbolsParser.RULE_function_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = WorkspaceSymbolsParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(WorkspaceSymbolsParser.Function)
            self.state = 179
            self.return_val()
            self.state = 180
            self.identifier()
            self.state = 181
            self.match(WorkspaceSymbolsParser.OpenParen)
